-- add new logger info dacha